// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table products {
  id integer [pk]
  name varchar(50) [not null]
  description text
  unit_price numeric(6,2) [not null, default:0]
  stock integer [not null, default:0]
}

Table users {
  id integer [pk]
  name varchar(100) [not null]
  email varchar(100) [unique, not null]
  address varchar(500)
  is_admin boolean
}

Table cart_items {
  user_id integer [pk, ref: > users.id]
  product_id integer [pk, ref: > products.id]
  amount integer [not null, default:0]
}

enum order_status {
  created
  accepted
  paid
  posted
  recieved
}

Table orders {
  id integer [pk]
  user_id integer [ref: > users.id]
  created timestamp [not null]
  status order_status [not null]
}

Table order_items {
  order_id integer [pk, ref: > orders.id]
  product_id integer [pk, ref: > products.id]
  amount integer [not null, default:0]
  unit_price numeric(6,2) [not null, default:0]
  total_cost numeric(6,2) [not null, default:0]
}